--- a/PSs/src/main/resources/templates/class_terms.html
+++ b/PSs/src/main/resources/templates/class_terms.html
@@ -61,6 +61,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/term">Term</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/class">Classes</a>
+                    </li>
                 </ul>
             </div>
         </div>
