--- a/PSs/src/main/resources/templates/indexadmin.html
+++ b/PSs/src/main/resources/templates/indexadmin.html
@@ -61,6 +61,10 @@
 					<li class="nav-item">
 						<a class="nav-link" href="/term">Term</a>
 					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/class">Classes</a>
+					</li>
+
 				</ul>
 			</div>
 		</div>
@@ -115,15 +119,19 @@
 		<td th:text="${admin.email}"></td>
 		<td th:text="${#strings.listJoin(admin.degree, ',')}"></td>
 		<td th:text="${admin.adress.streetnumber} + ', '+ ${admin.adress.postalcode}"></td>
-		<td ><span th:each="class,iterStat : ${admin.classes}">
-					<span th:text="${class.name}"/><th:block th:if="${!iterStat.last}">,</th:block>
-				</span></td>
+
 		<td><a th:href="@{/deleteAdmin/{id}(id=${admin.id})}" >Delete</a></td>
 		<td><a th:href="@{/showFormForUpdateAdmin/{id}(id=${admin.id})}">Update</a></td>
 
 	</tr>
 	</tbody>
 </table>
+<center>
+<div th:if="${message}">
+	<h2 th:text="NoDataAvailable"/>
+</div>
+</center>
+
 <center>
 	<h2><a  th:href = "@{/showNewAdminForm}" color="black"> New Admin</a></h2>
 </center>
