--- a/PSs/src/main/resources/templates/indexstudentonspecialisation.html
+++ b/PSs/src/main/resources/templates/indexstudentonspecialisation.html
@@ -58,8 +58,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/specialization">Specialization</a>
                     </li>
+
                     <li class="nav-item">
                         <a class="nav-link" href="/term">Term</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/class">Classes</a>
                     </li>
                 </ul>
             </div>
