--- a/PSs/src/main/resources/templates/indexterm.html
+++ b/PSs/src/main/resources/templates/indexterm.html
@@ -61,6 +61,10 @@
 					<li class="nav-item">
 						<a class="nav-link" href="/term">Term</a>
 					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/class">Classes</a>
+					</li>
+
 				</ul>
 			</div>
 		</div>
@@ -113,6 +117,11 @@
 	</tr>
 	</tbody>
 </table>
+<center>
+	<div th:if="${message}">
+		<h2 th:text="NoDataAvailable"/>
+	</div>
+</center>
 <center>
 	<h2><a  th:href = "@{/showNewTermForm}" color="black"> New Term</a></h2>
 </center>
