--- a/PSs/src/main/resources/templates/new_admin.html
+++ b/PSs/src/main/resources/templates/new_admin.html
@@ -66,6 +66,9 @@
 					<li class="nav-item">
 						<a class="nav-link" href="/term">Term</a>
 					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/classs">Classes</a>
+					</li>
 				</ul>
 			</div>
 		</div>
