--- a/PSs/src/main/resources/templates/new_specialization.html
+++ b/PSs/src/main/resources/templates/new_specialization.html
@@ -63,8 +63,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/specialization">Specialization</a>
                     </li>
+
                     <li class="nav-item">
                         <a class="nav-link" href="/term">Term</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/class">Classes</a>
                     </li>
                 </ul>
             </div>
